# tinyspy

./: .gitignore  CMakeLists.txt  README.md  client.pro  client_ew.cpp  server.pro  socket.cpp  socket.h
client-app/: client.cpp
server-app/: Server.cpp  Server.h  main.cpp
server-app/Connection/: ClientConnection.cpp  ClientConnection.h  Connection.cpp  Connection.h  ConnectionCollector.cpp  ConnectionCollector.h  ConnectionManager.cpp  ConnectionManager.h  ConnectionState.h  executor_args.h
server-app/Console/: CommandCode.h  ConsoleHandler.cpp  ConsoleHandler.h
server-app/Exception/: ConnectionException.cpp  ConnectionException.h  ConnectionTerminationException.cpp  ConnectionTerminationException.h
server-app/Execution/: Executor.cpp  Executor.h
server-app/OutMessage/: OutMessage.cpp  OutMessage.h  a.out  main.cpp
server-app/OutMessageQueue/: OutMessageQueue.cpp  OutMessageQueue.h  monitor.h
server-app/Pipes/: Pipe.cpp  Pipe.h
server-app/Request/: Request.cpp  Request.h  RequestCode.cpp  RequestCode.h  RequestQueue.cpp  RequestQueue.h  RequestQueueState.h
server-app/Serialization/: AuthMessage.cpp  AuthMessage.h  DataMessage.cpp  DataMessage.h  TinyMessage.h  messages.pb.cc  messages.pb.h  messages.proto
server-app/Socket/: ListeningSocket.cpp  ListeningSocket.h  Socket.cpp  Socket.h
server-app/Thread/: ConnectionThread.cpp  ConnectionThread.h  ExecutorThread.cpp  ExecutorThread.h  NetworkThread.cpp  NetworkThread.h  Thread.cpp  Thread.h
server-app/basic/: RWOperation.cpp  RWOperation.h
src/: client.cpp
src/Client/: client.cpp  client2.cpp
src/Client/ClientConnection/: clientconnection.cpp  clientconnection.h
src/Server/: main.cpp  server.cpp
src/Server/Client/: Client.cpp  Client.hpp
src/Server/ConsoleHandler/: ConsoleHandler.cpp  ConsoleHandler.hpp
src/Server/NetworkCommunication/ListenerCallAction/: ListenerCallAction.cpp  ListenerCallAction.hpp
src/Server/NetworkCommunication/ReadingAction/: ReadingAction.cpp  ReadingAction.hpp
src/Server/NetworkCommunication/WritingAction/: WritingAction.cpp  WritingAction.hpp
src/Server/socketCreator/: socketCreator.cpp  socketCreator.hpp  socketCreator.hpp.gch
